--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: moorelabhelpR
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Moore Lab Helper Functions
 Version: 0.1.0
-Author: Who wrote it
+Author: Ryan Crawford
 Maintainer: The package maintainer <yourself@somewhere.net>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
