--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,13 +3,13 @@ Type: Package
 Title: Moore Lab Helper Functions
 Version: 0.1.0
 Author: Ryan Crawford
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Maintainer: The package maintainer <rvc3@cornell.edu>
+Description: Functions primarily make working with BreedBase easier and creating trial plans and maps.
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
 Imports: 
+    QBMS,
     stringr
 URL: https://rvcrawford.github.io/moorelabhelpR/
