--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,9 +3,9 @@ Type: Package
 Title: Moore Lab Helper Functions
 Version: 0.1.0
 Author: Ryan Crawford
-Maintainer: The package maintainer <rvc3@cornell.edu>
+Maintainer: <rvc3@cornell.edu>
 Description: Functions primarily make working with BreedBase easier and creating trial plans and maps.
-License: What license is it under?
+License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
